--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ header .logo {
     position: relative;
     max-width: 80px;
 }
-.toggle {
+/* .toggle {
     position: relative;
     width: 30px;
     height: 30px;
@@ -40,13 +40,29 @@ header .logo {
     background-position: center;
     background-repeat: no-repeat;
     filter: invert(1);
+    z-index: 11;
 }
 .toggle.active {
+    position: fixed;
+    right: 20px;
     background: url(images/close.png);
     background-size: 25px;
     background-position: center;
     background-repeat: no-repeat;
     filter: invert(1);
+} */
+header ul.navigation.active {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background:#fff;
+    z-index: 10;
 }
 header ul {
     position: relative;
@@ -167,6 +183,10 @@ header ul li a {
     header ul {
         display: none;
     }
+    header ul li a {
+        font-size: 1.5em;
+        margin: 5px 0;
+    }
     section {
         padding: 20px 20px 120px;
     }
@@ -197,6 +217,27 @@ header ul li a {
         width: 50px;
         border-bottom-left-radius: 5px;
         border-top-left-radius: 5px;
+    }
+    .toggle {
+        position: relative;
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+        background: url(images/menu.png);
+        background-size: 30px;
+        background-position: center;
+        background-repeat: no-repeat;
+        filter: invert(1);
+        z-index: 11;
+    }
+    .toggle.active {
+        position: fixed;
+        right: 20px;
+        background: url(images/close.png);
+        background-size: 25px;
+        background-position: center;
+        background-repeat: no-repeat;
+        filter: invert(1);
     }
     .circle {
         clip-path: circle(400px at center bottom);
