--- a/style.css
+++ b/style.css
@@ -223,20 +223,16 @@ header ul li a {
         width: 30px;
         height: 30px;
         cursor: pointer;
-        background: url(images/menu.png);
         background-size: 30px;
-        background-position: center;
-        background-repeat: no-repeat;
+        background: url(images/menu.png) no-repeat center;
         filter: invert(1);
         z-index: 11;
     }
     .toggle.active {
         position: fixed;
         right: 20px;
-        background: url(images/close.png);
         background-size: 25px;
-        background-position: center;
-        background-repeat: no-repeat;
+        background: url(images/close.png) no-repeat center;
         filter: invert(1);
     }
     .circle {
